[gd_scene load_steps=2 format=3 uid="uid://cxprpd33t128p"]

[ext_resource type="Script" uid="uid://cwpcjsbyqpxn0" path="res://scripts/widgets/quickchat_widget.gd" id="1_6dobv"]

[node name="QuickchatWidget" type="TabContainer"]
custom_minimum_size = Vector2(440, 0)
offset_right = 172.0
offset_bottom = 229.0
current_tab = 0
script = ExtResource("1_6dobv")

[node name="Chatbox" type="VBoxContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Chatbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Chatbox/HBoxContainer2"]
layout_mode = 2
text = "Routing key: "

[node name="RoutingKeyLineEdit" type="LineEdit" parent="Chatbox/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave empty to use default"

[node name="HBoxContainer3" type="HBoxContainer" parent="Chatbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Chatbox/HBoxContainer3"]
layout_mode = 2
text = "Role: "

[node name="RoleKeyLineEdit" type="LineEdit" parent="Chatbox/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "user"
placeholder_text = "E.G. user"

[node name="MessageContentTextEdit" type="TextEdit" parent="Chatbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Message to send..."
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Chatbox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ClearFieldButton" type="Button" parent="Chatbox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="SendMessageButton" type="Button" parent="Chatbox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Send"

[connection signal="pressed" from="Chatbox/HBoxContainer/ClearFieldButton" to="." method="_on_clear_field_button_pressed"]
[connection signal="pressed" from="Chatbox/HBoxContainer/SendMessageButton" to="." method="_on_send_message_button_pressed"]
